--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -1,5 +1,5 @@
 .card-item {
-    background-color: #fff8a5;
+    background-color: var(--card-bg, #fff8a5);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
     color: black;
     min-width: 200px;
@@ -20,6 +20,6 @@
 
 .card-item__controls button{
     color: black;
-    background-color: #fff8a5;
+    background-color: var(--card-bg, #fff8a5);
     padding: 0.5em 1em;
 }
