--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 }
 
 .header {
-  background: white;
   padding: 1rem;
   color: black;
   display: flex;
@@ -25,6 +24,7 @@
   font-size: 2.5rem;
   font-weight: bold;
   margin: 0 0 0.5rem 0;
+  letter-spacing: -.075rem;
 }
 
 .subtitle {
@@ -74,8 +74,38 @@
   box-shadow: 0 0 0 2px #e9e9e9;
 }
 
+/* Bord Form error validation */
+.input-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+.input-group label {
+  margin-bottom: 0.25rem;
+  font-weight: 500;
+}
+
+.input-group input {
+  padding: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+.input-group input.error {
+  border-color: #dc3545;
+}
+
+.error-message {
+  color: #dc3545;
+  font-size: 0.875rem;
+  margin-top: 0.25rem;
+  font-weight: 500;
+}
+
 @media (max-width: 768px) {
-  .app-header {
+  .header {
     flex-direction: column;
     gap: 1.5rem;
     align-items: flex-start;
@@ -83,8 +113,12 @@
   
   .header-content {
     align-items: flex-start;
+    width: 100%;
   }
   
+  .subtitle{
+    margin: 0;
+  }
 
   .title {
     font-size: 2rem;
