--- a/src/components/styles/FormPopUp.css
+++ b/src/components/styles/FormPopUp.css
@@ -8,13 +8,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	z-index: 1000; /* Ensure it's on top */
+	z-index: 1000;
+	/* Ensure it's on top */
 }
 
 .pop-up__content {
 	color: black;
 	background-color: white;
-	width: 40%;
+	width: 30%;
 	padding: 20px;
 	border-radius: 8px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -22,58 +23,19 @@
 	flex-direction: column;
 }
 
-.pop-up__content label {
-	font-weight: bold;
-	margin-bottom: 0.5em;
-}
-
-.pop-up__content input {
-	background-color: white;
-	color: black;
-	padding: 0.5rem 0.75rem;
-	border-radius: 5px;
-	font-size: 0.85em;
-	width: 80%;
-}
-
-.pop-up__content input:focus {
-  outline: none;
-  border: 2px solid #555; 
-  box-shadow: 0 0 2px #aaa;
-}
-
 .pop-up__close {
+  padding: .5em;
 	background-color: white;
 	color: black;
 	border: 0;
 	align-self: flex-end;
+  font-size: 1.5em;
+  cursor: pointer;
+  font-weight: 400;
+  transition: all 0.3s ease-in-out;
 }
 
-/* Children Style */
-.form-inputs {
-	text-align: left;
-	display: flex;
-	flex-direction: column;
+.pop-up__close:hover {
+  transform: scale(1.1);
+  font-weight: 500;
 }
-
-.form-inputs__input {
-	display: flex;
-	flex-direction: column;
-	margin-bottom: 1em;
-}
-
-.form-submit__button {
-	margin-top: 1em;
-}
-
-.form-input__error {
-  box-shadow: 0 0 4px 2px rgba(255, 0, 0, 0.4); 
-}
-
-.form-error__msg {
-  color: red;
-  font-size: 0.85em;
-  margin-top: 0.5em;
-}
-
-
