--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,22 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+#root {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 :root {
   font-family: Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #ffffff;
-  background-color: #242424;
+  color: #242424;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -22,13 +33,21 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+} */
+
+body, #root {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
+
 
 h1 {
   font-size: 3.2em;
