--- a/src/components/styles/Board.css
+++ b/src/components/styles/Board.css
@@ -1,29 +1,40 @@
 .board {
-    background-color: #5fb3d4;
+    background-color: #f5f5f5;
     padding: 2rem;
     margin: 1rem;
-    border: 2px solid black;
+    border-radius: 2rem;
     min-width: 300px;
     min-height: 400px;
 }
 
-.board__title {
-    text-align: center;
-    color: black;
+.board__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
     margin-bottom: 1rem;
 }
 
-.board__owner {
-    text-align: center;
+.board__header-right {
+    display: flex;
+    align-items: center;
+}
+.board__title {
     color: black;
-    margin-bottom: 2rem;
+    font-size: 1.5rem;
 }
 
-.board__cards-container {
+.board__owner {
+    color: black;
+    margin: 0 1rem 0 0;
+}
+
+.card__list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
-    padding: 1rem;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .board__empty-message {
