--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,18 @@ body, #root {
   color-scheme: light;
 }
 
-.app {
+/* .app {
   flex: 1;
   display: flex;
   flex-direction: column;
+} */
+
+.app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* ensures full height */
 }
+
 
 .header {
   padding: 1rem;
@@ -141,10 +148,9 @@ body, #root {
   margin-top: auto;
   padding: 1rem;
   text-align: center;
-  font-size: 0.9rem;
-  color: #666;
+  font-size: 1 rem;
+  color: black;
   border-top: 1px solid #ccc;
-  background-color: #f9f9f9;
+  background-color: white;
 }
-
 
