--- a/src/index.css
+++ b/src/index.css
@@ -76,12 +76,18 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  border: 1px solid #a8a6a6;
+  padding: 0.5em 1.5em;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 800;
   font-family: inherit;
-  background-color: #f9f9f9;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  background-color: #d9d9d9;
+  color: #444;
+  transition: all 0.5s ease-in-out;
+}
+
+button:hover {
+  transform: scale(1.02);
+  border: 1px solid #6c6a6a;
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
 }
