--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,13 @@ body, #root {
 .app {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* ensures full height */
+  margin: 0 auto;
+  width: 100%;
 }
 
 
 .header {
-  padding: 1rem;
+  padding: 2rem;
   color: black;
   display: flex;
   justify-content: space-between;
