--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -3,12 +3,20 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
     color: black;
     min-width: 200px;
+    max-width: 280px;
+    width: 100%;
     min-height: 200px;
+    height: 18em;
     padding: 1.5rem;
+    margin-top: 1rem;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
+}
+
+.card-item__message {
+    padding: 0.5rem;
 }
 
 .card-item__controls {
