--- a/src/components/styles/Board.css
+++ b/src/components/styles/Board.css
@@ -4,7 +4,7 @@
     margin: 2rem;
     border-radius: 2rem;
     min-width: 300px;
-    min-height: 400px;
+    min-height: 70vh;
 }
 
 .board__header {
