--- a/src/components/styles/FormPopUp.css
+++ b/src/components/styles/FormPopUp.css
@@ -1,34 +1,34 @@
 .pop-up__overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100vh;
-	background-color: rgba(0, 0, 0, 0.5);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	z-index: 1000;
-	/* Ensure it's on top */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  /* Ensure it's on top */
 }
 
 .pop-up__content {
-	color: black;
-	background-color: white;
-	width: 35%;
-	padding: 20px;
-	border-radius: 8px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-	display: flex;
-	flex-direction: column;
+  color: black;
+  background-color: white;
+  width: 35%;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
 }
 
 .pop-up__close {
-  padding: .5em;
-	background-color: white;
-	color: black;
-	border: 0;
-	align-self: flex-end;
+  padding: 0 .5em;
+  background-color: white;
+  color: black;
+  border: 0;
+  align-self: flex-end;
   font-size: 1.5em;
   cursor: pointer;
   font-weight: 400;
